samples/_failures_safe/1761719982_ac2021_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71dbfc9f.c: In function ‘main’:
./samples/SAFE/__tmp_71dbfc9f.c:151:17: error: expected expression at end of input
  151 |                 if (
      |                 ^~
./samples/SAFE/__tmp_71dbfc9f.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_71dbfc9f.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_71dbfc9f.c:151:17: error: expected declaration or statement at end of input
